experiment_output/error_log/nondex-JavaFamilyClub-jfoa:dfs.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task756/wd/NonDex-plugin-test/github.com/JavaFamilyClub/jfoa/jf-commons/src/main/java/club/javafamily/commons/utils/ExportUtil.java:23: error: package javax.activation does not exist
import javax.activation.MimetypesFileTypeMap;
                       ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task756/wd/NonDex-plugin-test/github.com/JavaFamilyClub/jfoa/jf-commons/src/main/java/club/javafamily/commons/utils/ExportUtil.java:32: error: cannot find symbol
   private static final MimetypesFileTypeMap MIME_TYPES = new MimetypesFileTypeMap();
                        ^
  symbol:   class MimetypesFileTypeMap
  location: class ExportUtil
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task756/wd/NonDex-plugin-test/github.com/JavaFamilyClub/jfoa/jf-commons/src/main/java/club/javafamily/commons/utils/ExportUtil.java:32: error: cannot find symbol
   private static final MimetypesFileTypeMap MIME_TYPES = new MimetypesFileTypeMap();
                                                              ^
  symbol:   class MimetypesFileTypeMap
  location: class ExportUtil
Note: /mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task756/wd/NonDex-plugin-test/github.com/JavaFamilyClub/jfoa/jf-commons/src/main/java/club/javafamily/commons/utils/Tool.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
3 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':jf-commons:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 10s
